# vllm-omni-rs

./: Cargo.toml  README.md
patches/: 0001-headless-respect-async-chunk.patch
src/: audio.rs  chat_template.rs  engine.rs  introspect.rs  main.rs  master.rs  protocol.rs  routing.rs  server.rs  stages.rs
src/routes/: chat.rs  mod.rs  models.rs  speech.rs
