[package]
name = "vllm-omni-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust, ZMQ-native HTTP frontend for vllm-omni TTS"

[[bin]]
name = "vllm-omni-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hound = "3"
libc = "0.2"
mimalloc = "0.1"
num_cpus = "1"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
zmq = "0.10"

# Vendored vLLM crates (with omni extensions)
vllm-engine-core-client = { path = "vendor/engine-core-client" }

# Upstream vLLM Rust crates (unmodified)
vllm-managed-engine = { git = "https://github.com/vllm-project/vllm", tag = "v0.25.0" }
vllm-tokenizer = { git = "https://github.com/vllm-project/vllm", tag = "v0.25.0" }

[profile.release]
lto = "thin"
panic = "abort"
